# erlpack

./: Cargo.toml
crates/erlpack-wasm/: Cargo.toml
crates/erlpack-wasm/src/: lib.rs  term_to_value.rs  value_to_term.rs
src/: decoder.rs  encoder.rs  error.rs  lib.rs  reader.rs  term.rs
src/wasm/: from_js_value.rs  from_term.rs  mod.rs
