[workspace]
members = ["crates/erlpack-wasm"]

[workspace.package]
repository = "https://github.com/helvieq499/erlpack-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[package]
name = "erlpack"
version = "0.0.1"
edition = "2021"
description = "Parser for Erlang's term format"
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords = ["erlang", "elixir", "etf"] # gleam too?
categories = ["parser-implementations"]

[dependencies]
byteorder = "1.4.3"
num-bigint = "0.4.3"
