[workspace]
members = ["crates/erlpack-wasm"]

[package]
name = "erlpack"
version = "0.0.1"
edition = "2021"
description = "Parser for Erlang's term format"
repository = "https://github.com/helvieq499/erlpack-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["erlang", "elixir", "etf"] # gleam too?
categories = ["parser-implementations"]

[dependencies]
byteorder = "1.4.3"
num-bigint = "0.4.3"
