[package]
name = "erlpack-wasm"
version = "0.1.0"
edition = "2021"
description = "Parser for Erlang's term format on WebAssembly"
repository = "https://github.com/helvieq499/erlpack-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["erlang", "elixir", "etf"] # gleam too?
categories = ["parser-implementations", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.erlpack]
path = "../../"

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
num-bigint = "0.4.3"
console_error_panic_hook = "0.1.7"
